--- a/Front-end/BunchaKimchi/package.json
+++ b/Front-end/BunchaKimchi/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
